syntax = "proto3";

package infraboard.mcenter.service;
option go_package = "github.com/infraboard/mcenter/apps/service";

import "github.com/infraboard/mcube/pb/page/page.proto";
import "apps/service/pb/service.proto";

// RPC 服务
service RPC {
	rpc ValidateCredential(ValidateCredentialRequest) returns(Service);
	rpc QueryService(QueryServiceRequest) returns(ServiceSet);
	rpc DescribeService(DescribeServiceRequest) returns(Service);
}

// ValidateCredentialRequest 校验服务凭证
message ValidateCredentialRequest {
    // 服务客户端ID
    // @gotags: json:"client_id" yaml:"client_id" validate:"required,lte=100"
    string client_id = 1;
    // 服务客户端凭证
    // @gotags: json:"client_secret" yaml:"client_secret" validate:"required,lte=100"
    string client_secret = 2;                  
}

// QueryMicroRequest 查询应用列表
message QueryServiceRequest {
    // @gotags: json:"page"
   infraboard.mcube.page.PageRequest page = 1;
    // 服务类型
    // @gotags: json:"type" yaml:"type"
    Type type = 2;
    // 服务代码SSH仓库地址
    // @gotags: json:"repository_ssh_url" yaml:"repository_ssh_url"
    repeated string repository_ssh_url = 3;
}

enum DescribeBy {
    // 通过service id查询应用详情
    SERVICE_ID = 0;
    // 通过service name查询应用详情
    SERVICE_NAME = 1;
    // 通过service client_id查询应用详情
    SERVICE_CLIENT_ID =2;
}

// DescribeMicroRequest 查询应用详情
message DescribeServiceRequest {
    // 查询详情的方式
    // @gotags: json:"describe_by" yaml:"describe_by"
    DescribeBy describe_by = 1;
    // 服务客户端Id
    // @gotags: json:"client_id" yaml:"client_id"
    string client_id = 2;
    // 服务名称
    // @gotags: json:"name" yaml:"name"
    string name = 3;
    // 服务Id
    // @gotags: json:"id" yaml:"id"
    string id = 4;
}

// DeleteMicroRequest todo
message DeleteServiceRequest {
    // 服务Id
    // @gotags: json:"id" yaml:"id"
    string id = 1;
}